fixed google map not showing on android

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,7 @@
 page-home {
   // transition: opacity 150ms ease-in;
+  #map {
+    width: 100%;
+    height: 100%;
+  }
 }
